--- a/index.html
+++ b/index.html
@@ -1,48 +1,97 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>مستند زندگی سعید مجتبی‌زاده | تماشای آنلاین و رایگان</title>
-  <meta name="description" content="تماشای رایگان مستند زندگی علمی و حرفه‌ای سعید مجتبی‌زاده به صورت آنلاین در آپارات.">
-  <meta name="keywords" content="سعید مجتبی زاده, مستند ایرانی, آپارات, مهندس ایرانی, ویدیو علمی, زندگی‌نامه">
+  <title>تماشای مستند زندگی سعید مجتبی‌زاده | نسخه رسمی و رایگان</title>
+  <meta name="description" content="مستند رسمی زندگی علمی، شخصی و حرفه‌ای سعید مجتبی‌زاده را همین حالا به‌صورت رایگان و آنلاین تماشا کنید.">
+  <meta name="keywords" content="سعید مجتبی زاده, مستند ایرانی, ویدیو علمی, آپارات, مهندس ایرانی, ویدیو مستند">
   <meta name="author" content="mojtabazadeh.ir">
+  <meta property="og:type" content="video.other">
+  <meta property="og:title" content="مستند زندگی سعید مجتبی‌زاده">
+  <meta property="og:description" content="تماشای آنلاین و رایگان مستند زندگی مهندس ایرانی سعید مجتبی‌زاده در آپارات">
+  <meta property="og:image" content="https://static.cdn.asset.aparat.com/avt/722241-3647__71595.jpg">
+  <meta property="og:url" content="https://www.aparat.com/v/x722241">
+
+  <!-- فونت فارسی واکنش‌گرا -->
+  <link href="https://cdn.fontcdn.ir/Font/Persian/Vazirmatn/Vazirmatn.css" rel="stylesheet" type="text/css" />
+
   <style>
     body {
       margin: 0;
-      background-color: #121212;
-      color: #ffffff;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: #fff;
       font-family: 'Vazirmatn', sans-serif;
       text-align: center;
-      direction: rtl;
+      padding: 0 15px;
     }
     h1 {
       font-size: 2em;
       margin-top: 30px;
-      color: #00c6ff;
+      color: #00ffc6;
+      text-shadow: 1px 1px 3px #000;
     }
     p {
+      max-width: 720px;
       margin: 20px auto;
-      max-width: 700px;
-      line-height: 1.8;
+      line-height: 2;
+      font-size: 1.1em;
     }
     .video-container {
-      margin: 40px auto;
-      max-width: 800px;
+      margin: 30px auto;
+      max-width: 100%;
+      aspect-ratio: 16 / 9;
+      position: relative;
+    }
+    .video-container iframe, .video-container div {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    .share-button {
+      background-color: #00c6ff;
+      color: #fff;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 8px;
+      font-size: 1em;
+      cursor: pointer;
+      margin: 20px auto;
+      display: inline-block;
+      transition: background-color 0.3s, transform 0.2s;
+    }
+    .share-button:hover {
+      background-color: #0096cc;
+      transform: scale(1.05);
     }
     footer {
       margin-top: 50px;
       font-size: 0.9em;
-      color: #bbb;
+      color: #ccc;
+      padding-bottom: 30px;
+    }
+    @media screen and (max-width: 600px) {
+      h1 {
+        font-size: 1.6em;
+      }
+      p {
+        font-size: 1em;
+      }
+      .share-button {
+        width: 90%;
+        font-size: 1em;
+      }
     }
   </style>
-  <!-- Structured Data Schema for Google -->
+
+  <!-- Structured Data Schema برای گوگل -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "VideoObject",
     "name": "مستند زندگی سعید مجتبی‌زاده",
-    "description": "تماشای رایگان مستند علمی زندگی سعید مجتبی‌زاده از طریق آپارات.",
+    "description": "مستند رسمی و علمی درباره زندگی و فعالیت‌های مهندس سعید مجتبی‌زاده.",
     "thumbnailUrl": "https://static.cdn.asset.aparat.com/avt/722241-3647__71595.jpg",
     "uploadDate": "2023-08-15",
     "duration": "PT20M",
@@ -52,17 +101,23 @@
   </script>
 </head>
 <body>
-  <h1>مستند زندگی سعید مجتبی‌زاده</h1>
+  <h1>🎬 مستند زندگی سعید مجتبی‌زاده</h1>
   <p>
-    این ویدیو نگاهی دارد به زندگی، تجربیات علمی و فعالیت‌های مهندس سعید مجتبی‌زاده. به صورت رایگان و آنلاین از طریق آپارات تماشا کنید.
+    این مستند نگاهی دارد به زندگی حرفه‌ای، علمی و شخصی مهندس سعید مجتبی‌زاده. با کیفیت بالا و رایگان تماشا کنید.
   </p>
+
   <div class="video-container">
     <div id="43843190020">
       <script type="text/javascript" src="https://www.aparat.com/embed/x722241?data[rnddiv]=43843190020&data[responsive]=yes&autoplay=true"></script>
     </div>
   </div>
+
+  <button class="share-button" onclick="window.open('https://www.aparat.com/v/x722241', '_blank')">
+    اشتراک‌گذاری در آپارات 📤
+  </button>
+
   <footer>
-    © تمامی حقوق محفوظ است | طراحی و اجرا: mojtabazadeh.ir
+    © تمامی حقوق محفوظ است | طراحی و بهینه‌سازی: mojtabazadeh.ir
   </footer>
 </body>
 </html>
