--- a/index.html
+++ b/index.html
@@ -3,89 +3,87 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>معرفی ویدیوهای مستند</title>
+  <title>مستند زندگی سعید مجتبی‌زاده</title>
+  <meta name="description" content="تماشای تمام‌صفحه مستند علمی زندگی مهندس ایرانی سعید مجتبی‌زاده با کنترل کامل پلیر آپارات.">
+  <meta name="keywords" content="سعید مجتبی زاده, مستند ایرانی, آپارات, ویدیو علمی, مهندس ژئوتکنیک">
+  <meta property="og:type" content="video.other">
+  <meta property="og:title" content="مستند زندگی سعید مجتبی‌زاده">
+  <meta property="og:image" content="https://static.cdn.asset.aparat.com/avt/722241-3647__71595.jpg">
+  <meta property="og:url" content="https://www.aparat.com/v/x722241">
   <link href="https://cdn.fontcdn.ir/Font/Persian/Vazirmatn/Vazirmatn.css" rel="stylesheet" />
+
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
+    }
+    html, body {
+      height: 100%;
       font-family: 'Vazirmatn', sans-serif;
-      background: linear-gradient(135deg, #1f1c2c, #928dab);
+      background: linear-gradient(225deg, #0f0c29, #302b63, #24243e);
       color: #fff;
-      padding: 20px;
+      overflow: hidden;
     }
-    h1 {
-      text-align: center;
-      font-size: 2em;
-      margin-bottom: 30px;
-      color: #00ffc6;
-    }
-    .video-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 25px;
-    }
-    .video-card {
-      background-color: rgba(255, 255, 255, 0.05);
-      border-radius: 12px;
-      padding: 15px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-      transition: transform 0.3s;
-    }
-    .video-card:hover {
-      transform: scale(1.03);
-    }
-    .thumbnail {
+    header {
+      position: absolute;
+      top: 20px;
       width: 100%;
-      border-radius: 8px;
+      text-align: center;
+      z-index: 2;
+      animation: fadeIn 1s ease-out forwards;
     }
-    .video-title {
-      font-size: 1.2em;
-      margin: 10px 0;
-      color: #ffd700;
+    header h1 {
+      font-size: 2em;
+      color: #00ffc6;
+      text-shadow: 1px 1px 4px #000;
     }
-    .video-desc {
-      font-size: 0.95em;
-      line-height: 1.6;
-      margin-bottom: 10px;
+    .video-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 1;
+      animation: fadeIn 1.5s ease-out forwards;
     }
-    .watch-button {
-      background-color: #00c6ff;
-      color: #fff;
-      padding: 8px 16px;
+    .video-wrapper iframe {
+      width: 100%;
+      height: 100%;
       border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      text-decoration: none;
-      display: inline-block;
     }
-    .watch-button:hover {
-      background-color: #0096cc;
+    footer {
+      position: absolute;
+      bottom: 20px;
+      width: 100%;
+      text-align: center;
+      font-size: 0.85em;
+      color: #bbb;
+      z-index: 2;
+      animation: fadeIn 2s ease-out forwards;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <h1>📺 مجموعه ویدیوهای مستند</h1>
-  <div class="video-list">
-    <div class="video-card">
-      <img src="https://static.cdn.asset.aparat.com/avt/722241-3647__71595.jpg" alt="مستند سعید" class="thumbnail" />
-      <div class="video-title">مستند زندگی سعید مجتبی‌زاده</div>
-      <div class="video-desc">نگاهی به زندگی علمی و حرفه‌ای مهندس ایرانی، با روایت تصویری جذاب.</div>
-      <a href="https://www.aparat.com/v/x722241" target="_blank" class="watch-button">مشاهده ویدیو</a>
-    </div>
+  <header>
+    <h1>🎬 مستند زندگی سعید مجتبی‌زاده</h1>
+  </header>
 
-    <div class="video-card">
-      <img src="https://via.placeholder.com/400x225.png?text=ویدیو+دوم" alt="ویدیو دوم" class="thumbnail" />
-      <div class="video-title">مستند پروژه‌های عمرانی ایران</div>
-      <div class="video-desc">بررسی پروژه‌های بزرگ عمرانی کشور با تحلیل‌های تخصصی و تصاویر هوایی.</div>
-      <a href="#" class="watch-button">مشاهده ویدیو</a>
-    </div>
-
-    <div class="video-card">
-      <img src="https://via.placeholder.com/400x225.png?text=ویدیو+سوم" alt="ویدیو سوم" class="thumbnail" />
-      <div class="video-title">مصاحبه با مهندسین برجسته</div>
-      <div class="video-desc">گفت‌وگو با متخصصان حوزه ژئوتکنیک و عمران درباره چالش‌های روز.</div>
-      <a href="#" class="watch-button">مشاهده ویدیو</a>
-    </div>
+  <div class="video-wrapper">
+    <iframe
+      src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame"
+      allowfullscreen
+      allow="autoplay; encrypted-media"
+      title="مستند سعید مجتبی‌زاده"
+    ></iframe>
   </div>
+
+  <footer>
+    © تمامی حقوق محفوظ است | mojtabazadeh.ir
+  </footer>
 </body>
 </html>
