--- a/index.html
+++ b/index.html
@@ -4,76 +4,49 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>مستند زندگی سعید مجتبی‌زاده</title>
-  <meta name="description" content="تماشای تمام‌صفحه مستند علمی زندگی مهندس ایرانی سعید مجتبی‌زاده با کنترل کامل پلیر آپارات.">
+  <meta name="description" content="تماشای مستند رسمی زندگی علمی و حرفه‌ای مهندس سعید مجتبی‌زاده با کنترل کامل پلیر آپارات.">
   <meta name="keywords" content="سعید مجتبی زاده, مستند ایرانی, آپارات, ویدیو علمی, مهندس ژئوتکنیک">
-  <meta property="og:type" content="video.other">
-  <meta property="og:title" content="مستند زندگی سعید مجتبی‌زاده">
-  <meta property="og:image" content="https://static.cdn.asset.aparat.com/avt/722241-3647__71595.jpg">
-  <meta property="og:url" content="https://www.aparat.com/v/x722241">
   <link href="https://cdn.fontcdn.ir/Font/Persian/Vazirmatn/Vazirmatn.css" rel="stylesheet" />
-
   <style>
-    * {
-      box-sizing: border-box;
+    body {
       margin: 0;
-      padding: 0;
-    }
-    html, body {
-      height: 100%;
       font-family: 'Vazirmatn', sans-serif;
-      background: linear-gradient(225deg, #0f0c29, #302b63, #24243e);
+      background: linear-gradient(135deg, #1f1c2c, #928dab);
       color: #fff;
-      overflow: hidden;
-    }
-    header {
-      position: absolute;
-      top: 20px;
-      width: 100%;
       text-align: center;
-      z-index: 2;
-      animation: fadeIn 1s ease-out forwards;
     }
-    header h1 {
+    h1 {
+      margin-top: 30px;
       font-size: 2em;
       color: #00ffc6;
       text-shadow: 1px 1px 4px #000;
     }
-    .video-wrapper {
+    .video-container {
+      position: relative;
+      padding-top: 56.25%; /* نسبت 16:9 */
+      margin: 30px auto;
+      max-width: 960px;
+    }
+    .video-container iframe {
       position: absolute;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 1;
-      animation: fadeIn 1.5s ease-out forwards;
-    }
-    .video-wrapper iframe {
       width: 100%;
       height: 100%;
       border: none;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
     }
     footer {
-      position: absolute;
-      bottom: 20px;
-      width: 100%;
-      text-align: center;
-      font-size: 0.85em;
-      color: #bbb;
-      z-index: 2;
-      animation: fadeIn 2s ease-out forwards;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
+      margin: 40px 0;
+      font-size: 0.9em;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>🎬 مستند زندگی سعید مجتبی‌زاده</h1>
-  </header>
-
-  <div class="video-wrapper">
+  <h1>🎬 مستند زندگی سعید مجتبی‌زاده</h1>
+  <div class="video-container">
     <iframe
       src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame"
       allowfullscreen
@@ -81,7 +54,6 @@
       title="مستند سعید مجتبی‌زاده"
     ></iframe>
   </div>
-
   <footer>
     © تمامی حقوق محفوظ است | mojtabazadeh.ir
   </footer>
