--- a/index.html
+++ b/index.html
@@ -1,76 +1,70 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>مستند زندگی سعید مجتبی‌زاده</title>
-  <meta name="description" content="تماشای رایگان مستند رسمی از زندگی علمی، شخصی و حرفه‌ای مهندس ایرانی سعید مجتبی‌زاده با کنترل کامل پلیر آپارات.">
-  <meta name="keywords" content="سعید مجتبی زاده, مستند ایرانی, آپارات, مهندس ژئوتکنیک, ویدیو علمی, زندگی‌نامه">
-  <meta name="author" content="mojtabazadeh.ir">
+  <meta name="description" content="تماشای تمام‌صفحه مستند رسمی از زندگی علمی و حرفه‌ای مهندس ایرانی سعید مجتبی‌زاده با کنترل کامل پلیر آپارات.">
+  <meta name="keywords" content="سعید مجتبی زاده, مستند ایرانی, آپارات, مهندس ژئوتکنیک, ویدیو علمی">
   <meta property="og:type" content="video.other">
   <meta property="og:title" content="مستند زندگی سعید مجتبی‌زاده">
-  <meta property="og:description" content="تماشای آنلاین مستند زندگی مهندس سعید مجتبی‌زاده با کنترل کامل از طریق آپارات">
+  <meta property="og:description" content="تماشای آنلاین مستند زندگی مهندس ایرانی سعید مجتبی‌زاده با کنترل کامل از طریق آپارات">
   <meta property="og:image" content="https://static.cdn.asset.aparat.com/avt/722241-3647__71595.jpg">
   <meta property="og:url" content="https://www.aparat.com/v/x722241">
-  <link href="https://cdn.fontcdn.ir/Font/Persian/Vazirmatn/Vazirmatn.css" rel="stylesheet" />
+  <link href="https://cdn.fontcdn.ir/Font/Persian/Shabnam/Shabnam.css" rel="stylesheet" />
 
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
+    }
+    html, body {
+      height: 100%;
+      font-family: 'Shabnam', sans-serif;
       background-color: #111;
       color: #fff;
-      font-family: 'Vazirmatn', sans-serif;
-      text-align: center;
+      overflow: hidden;
     }
-
-    h1 {
-      margin-top: 40px;
-      font-size: 2em;
-      color: #00ffc6;
+    header {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      z-index: 2;
       animation: fadeDown 1s ease-out forwards;
     }
-
-    .video-container {
-      margin: 40px auto;
-      max-width: 800px;
-      opacity: 0;
-      transform: translateY(30px);
-      animation: fadeUp 1.5s ease-out forwards;
+    header h1 {
+      font-size: 2em;
+      color: #00ffc6;
+      text-shadow: 1px 1px 4px #000;
     }
-
-    .video-container iframe {
+    .video-full {
+      width: 100vw;
+      height: 100vh;
+      animation: fadeUp 1.5s ease-out forwards;
+      z-index: 1;
+    }
+    .video-full iframe {
       width: 100%;
-      height: 450px;
-      border-radius: 12px;
+      height: 100%;
       border: none;
-      box-shadow: 0 0 15px rgba(0,0,0,0.5);
     }
 
     @keyframes fadeUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     @keyframes fadeDown {
-      from {
-        opacity: 0;
-        transform: translateY(-30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     @media screen and (max-width: 600px) {
-      .video-container iframe {
-        height: 220px;
-      }
-
-      h1 {
-        font-size: 1.5em;
+      header h1 {
+        font-size: 1.4em;
       }
     }
   </style>
@@ -81,18 +75,21 @@
     "@context": "https://schema.org",
     "@type": "VideoObject",
     "name": "مستند زندگی سعید مجتبی‌زاده",
-    "description": "مستند رسمی از زندگی علمی و حرفه‌ای مهندس ایرانی سعید مجتبی‌زاده.",
+    "description": "مستند رسمی درباره زندگی علمی و حرفه‌ای مهندس ایرانی سعید مجتبی‌زاده.",
     "thumbnailUrl": "https://static.cdn.asset.aparat.com/avt/722241-3647__71595.jpg",
     "uploadDate": "2023-08-15",
     "duration": "PT20M",
     "contentUrl": "https://www.aparat.com/v/x722241",
-    "embedUrl": "https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame"
+    "embedUrl": "https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=true"
   }
   </script>
 </head>
 <body>
-  <h1>🎬 مستند زندگی سعید مجتبی‌زاده</h1>
-  <div class="video-container">
+  <header>
+    <h1>🎬 مستند زندگی سعید مجتبی‌زاده</h1>
+  </header>
+
+  <div class="video-full">
     <iframe
       src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=true"
       allowfullscreen
