--- a/index.html
+++ b/index.html
@@ -1,84 +1,67 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>مستند زندگی سعید مجتبی‌زاده</title>
-  <meta name="description" content="تماشای تمام‌صفحه مستند رسمی از زندگی علمی و حرفه‌ای مهندس ایرانی سعید مجتبی‌زاده با کنترل کامل پلیر آپارات.">
-  <meta name="keywords" content="سعید مجتبی زاده, مستند ایرانی, آپارات, مهندس ژئوتکنیک, ویدیو علمی">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>تماشای مستند زندگی سعید مجتبی‌زاده | نسخه رسمی و رایگان</title>
+  <meta name="description" content="مستند رسمی زندگی علمی، شخصی و حرفه‌ای سعید مجتبی‌زاده را همین حالا به‌صورت رایگان و آنلاین تماشا کنید.">
+  <meta name="keywords" content="سعید مجتبی زاده, مستند ایرانی, ویدیو علمی, آپارات, مهندس ایرانی, ویدیو مستند">
+  <meta name="author" content="mojtabazadeh.ir">
   <meta property="og:type" content="video.other">
   <meta property="og:title" content="مستند زندگی سعید مجتبی‌زاده">
-  <meta property="og:description" content="تماشای آنلاین مستند زندگی مهندس ایرانی سعید مجتبی‌زاده با کنترل کامل از طریق آپارات">
+  <meta property="og:description" content="تماشای آنلاین و رایگان مستند زندگی مهندس ایرانی سعید مجتبی‌زاده در آپارات">
   <meta property="og:image" content="https://static.cdn.asset.aparat.com/avt/722241-3647__71595.jpg">
   <meta property="og:url" content="https://www.aparat.com/v/x722241">
-  <link href="https://cdn.fontcdn.ir/Font/Persian/SarvNaz/SarvNaz.css" rel="stylesheet" />
+
+  <!-- فونت مدرن فارسی -->
+  <link href="https://cdn.fontcdn.ir/Font/Persian/Vazirmatn/Vazirmatn.css" rel="stylesheet" type="text/css" />
 
   <style>
-    * {
-      box-sizing: border-box;
+    body {
       margin: 0;
-      padding: 0;
-    }
-    html, body {
-      height: 100%;
-      background-color: #111;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
       color: #fff;
-      font-family: 'SarvNaz', cursive;
+      font-family: 'Vazirmatn', sans-serif;
+      text-align: center;
+      padding: 0 15px;
+    }
+    h1 {
+      font-size: 2.2em;
+      margin-top: 40px;
+      color: #00ffc6;
+      text-shadow: 1px 1px 3px #000;
+    }
+    p {
+      max-width: 720px;
+      margin: 20px auto;
+      line-height: 2;
+      font-size: 1.1em;
+    }
+    .video-container {
+      margin: 40px auto;
+      max-width: 800px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
+      border-radius: 8px;
       overflow: hidden;
     }
-
-    header {
-      position: absolute;
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      z-index: 2;
-      animation: fadeDown 1s ease-out forwards;
-    }
-
-    header h1 {
-      font-size: 2.2em;
-      color: #ffb6c1;
-      text-shadow: 1px 1px 6px #000;
-    }
-
-    .video-container {
-      position: absolute;
-      top: 60px;
-      left: 0;
-      width: 100%;
-      height: calc(100% - 100px);
-      padding: 0 10px;
-      animation: fadeUp 1.5s ease-out forwards;
-    }
-
-    .video-container iframe {
-      width: 100%;
-      height: 100%;
+    .share-button {
+      background-color: #00c6ff;
+      color: #fff;
+      padding: 12px 25px;
       border: none;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+      border-radius: 6px;
+      font-size: 1em;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background-color 0.3s;
     }
-
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
+    .share-button:hover {
+      background-color: #0096cc;
     }
-
-    @keyframes fadeDown {
-      from { opacity: 0; transform: translateY(-30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @media screen and (max-width: 600px) {
-      header h1 {
-        font-size: 1.5em;
-      }
-      .video-container {
-        top: 50px;
-        height: calc(100% - 80px);
-      }
+    footer {
+      margin-top: 50px;
+      font-size: 0.9em;
+      color: #ccc;
     }
   </style>
 
@@ -88,27 +71,33 @@
     "@context": "https://schema.org",
     "@type": "VideoObject",
     "name": "مستند زندگی سعید مجتبی‌زاده",
-    "description": "مستند رسمی درباره زندگی علمی و حرفه‌ای مهندس ایرانی سعید مجتبی‌زاده.",
+    "description": "مستند رسمی و علمی درباره زندگی و فعالیت‌های مهندس سعید مجتبی‌زاده.",
     "thumbnailUrl": "https://static.cdn.asset.aparat.com/avt/722241-3647__71595.jpg",
     "uploadDate": "2023-08-15",
     "duration": "PT20M",
     "contentUrl": "https://www.aparat.com/v/x722241",
-    "embedUrl": "https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=true"
+    "embedUrl": "https://www.aparat.com/embed/x722241"
   }
   </script>
 </head>
 <body>
-  <header>
-    <h1>🎬 مستند زندگی سعید مجتبی‌زاده</h1>
-  </header>
+  <h1>🎬 مستند زندگی سعید مجتبی‌زاده</h1>
+  <p>
+    در این مستند رسمی، نگاهی داریم به زندگی حرفه‌ای، علمی و شخصی مهندس سعید مجتبی‌زاده. با کیفیت بالا و به‌صورت کاملاً رایگان تماشا کنید.
+  </p>
 
   <div class="video-container">
-    <iframe
-      src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=true"
-      allowfullscreen
-      allow="autoplay; encrypted-media"
-      title="مستند سعید مجتبی‌زاده"
-    ></iframe>
+    <div id="43843190020">
+      <script type="text/javascript" src="https://www.aparat.com/embed/x722241?data[rnddiv]=43843190020&data[responsive]=yes&autoplay=true"></script>
+    </div>
   </div>
+
+  <button class="share-button" onclick="window.open('https://www.aparat.com/v/x722241', '_blank')">
+    اشتراک‌گذاری در آپارات 📤
+  </button>
+
+  <footer>
+    © تمامی حقوق محفوظ است | طراحی و بهینه‌سازی: mojtabazadeh.ir
+  </footer>
 </body>
 </html>
